make tests make user logic make session logic

--- a/server/views/mixins/forms.pug
+++ b/server/views/mixins/forms.pug
@@ -2,17 +2,18 @@
 - const getInputId = (property) => `data_${property}`
 
 mixin formFor(entity = null)
-  form&attributes(attributes)
-    block
+  .card.p-5.w-50.m-auto.bg-dark.rounded-3
+    form&attributes(attributes)
+      block
 
 mixin input(entity, propertyName, errors = {})
   - propertyErrors = _.get(errors, propertyName)
   - classLine = 'form-control' + (_.isEmpty(propertyErrors) ? '' : ' is-invalid')
   - inputId = getInputId(propertyName)
-  .mb-3(class=(errors[propertyName] && 'has-danger'))
-    label(
-      for= inputId
-    )= propertyName
+  div.mt-3(class=(errors[propertyName] && 'has-danger'))
+    //label(
+    //  for= inputId
+    //)= propertyName
     input(
       id= inputId
       name=getInputName(propertyName)
@@ -23,9 +24,13 @@ mixin input(entity, propertyName, errors = {})
       .invalid-feedback= propertyErrors.map(({ message }) => message).join('. ')
 
 mixin submit(form = null)
-  input(class='btn btn-primary' type='submit')&attributes(attributes)
+  input(class='btn btn-warning px-5 mt-4' type='submit')&attributes(attributes)
 
 mixin buttonTo(action, method)
   form(action=action, method="post")
     input(name="_method" type="hidden" value=method)
     input(type='submit')&attributes(attributes)
+
+mixin title()
+  p.h2.text-white.fw-light
+    block
