--- a/server/views/statuses/edit.pug
+++ b/server/views/statuses/edit.pug
@@ -5,7 +5,8 @@ block header
 
 
 block content
-    +formFor()(action=route('statusUpdate', { id: 'status.id' }) method='post')
+    +formFor()(action=('/statuses/' + status.id) method='post')
         +input('status', 'name', errors)(type="text")
         input(name='_method' type='hidden' value='patch')
-        +submit('status')(class="btn btn-dark me-2" value=t('views.statuses.edit'))
+        +submit('status')(class="btn btn-outline-light me-4" value=t('views.statuses.edit'))
+        a.btn.btn-warning.mt-4.px-5(href=route('statuses'))= t('views.statuses.cancel')
