--- a/server/views/users/index.pug
+++ b/server/views/users/index.pug
@@ -5,11 +5,16 @@ block content
     thead
       tr
         th= t('views.users.id')
+        th= t('views.users.name')
         th= t('views.users.email')
         th= t('views.users.createdAt')
     tbody
       each user in users
         tr
           td= user.id
+          td= user.name
           td= user.email
           td= formatDate(user.createdAt)
+          td.d-flex
+            a.btn.btn-dark.m-1(href='/users/' + user.id + '/edit')= t('views.users.edit')
+            +buttonTo('/users/' + user.id, 'delete')(class="btn btn-warning m-1" value=t('views.users.delete'))
