--- a/server/views/session/new.pug
+++ b/server/views/session/new.pug
@@ -9,4 +9,5 @@ block content
       span= t('views.session.new.title')
     +input(signInForm, 'email', errors)(type="text" placeholder=t('views.session.new.mail'))
     +input(signInForm, 'password')(type="password" placeholder=t('views.session.new.password'))
-    +submit(signInForm)(value=t('views.session.new.submit'))
+    +submit(signInForm)(class="btn-outline-light me-4" value=t('views.session.new.submit'))
+    a.btn.btn-warning.mt-4.px-5(href='/')= t('views.statuses.cancel')
