--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -45,7 +45,7 @@ html(lang="en")
     //            a.nav-link(href=route('newUser'))= t('layouts.application.signUp')
 
 
-    .container.wrapper.flex-grow-1
+    .container.wrapper.flex-grow-1.mt-4
       each messages, type in reply.flash() || []
         each message in messages
           div.alert(class=`alert-${getAlertClass(type)}`)= message
