--- a/server/views/layouts/application.pug
+++ b/server/views/layouts/application.pug
@@ -17,48 +17,24 @@ html(lang="en")
               a.nav-link.px-2.text-secondary(href=route('users'))= t('layouts.application.users')
           .text-end.d-flex
             if isAuthenticated()
-              a.btn.btn-outline-light.me-2(href=route('statuses'))= t('layouts.application.statuses')
-              +buttonTo(route('session'), 'delete')(class="btn btn-warning" value=t('layouts.application.signOut'))
+              .flex.flex-row.justify-content-between
+                a.btn.btn-outline-light.me-2(href=route('statuses'))= t('layouts.application.statuses')
+                a.btn.btn-outline-light.me-2(href=route('tasks'))= t('layouts.application.tasks')
+                a.btn.btn-outline-light.me-2(href=route('labels'))= t('layouts.application.labels')
+                +buttonTo(route('session'), 'delete')(class="btn btn-warning" value=t('layouts.application.signOut'))
             else
               a.btn.btn-outline-light.me-2(href=route('newSession'))= t('layouts.application.signIn')
               a.btn.btn-warning(href=route('newUser'))= t('layouts.application.signUp')
-
-
-    //nav.navbar.navbar-expand-lg.navbar-light.bg-light.mb-3
-    //  .container-fluid
-    //    a.navbar-brand(href=route('root'))= t('appName')
-    //    button.navbar-toggler(data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent")
-    //      span.navbar-toggler-icon
-    //    .collapse.navbar-collapse(id="navbarToggleExternalContent")
-    //      .container-fluid
-    //        ul.navbar-nav.mr-auto
-    //          li.nav-item
-    //            a.nav-link(href=route('users'))= t('layouts.application.users')
-    //      ul.navbar-nav
-    //        if isAuthenticated()
-    //          li.nav-item
-    //            +buttonTo(route('session'), 'delete')(class="btn nav-link" value=t('layouts.application.signOut'))
-    //        else
-    //          li.nav-item
-    //            a.nav-link(href=route('newSession'))= t('layouts.application.signIn')
-    //          li.nav-item
-    //            a.nav-link(href=route('newUser'))= t('layouts.application.signUp')
-
 
     .container.wrapper.flex-grow-1.mt-4
       each messages, type in reply.flash() || []
         each message in messages
           div.alert(class=`alert-${getAlertClass(type)}`)= message
 
-      h3.my-4
+      h1.h3.my-4
         block header
       block content
 
     footer.p-3.bg-dark.text-white
       .container
         a.mb-2.mb-lg-0.text-white.text-decoration-none.fs-6.me-4.fw-lighter(target="_blank" href="https://ru.hexlet.io")= t('layouts.application.footer')
-
-
-    //footer
-    //  .container.my-5.pt-4.border-top
-    //    a(target="_blank" href="https://ru.hexlet.io")= t('layouts.application.footer')
