--- a/server/views/statuses/index.pug
+++ b/server/views/statuses/index.pug
@@ -1,7 +1,7 @@
 extends ../layouts/application.pug
 
 block content
-    a.a.btn.btn-dark.mb-4(href=route('getStatusPage'))= t('views.statuses.create')
+    a.btn.btn-dark.mb-4(href=route('getStatusPage'))= t('views.statuses.create')
     table.table.table-striped
         thead
             tr
