--- a/server/views/tasks/show.pug
+++ b/server/views/tasks/show.pug
@@ -1,11 +1,11 @@
 extends ../layouts/application.pug
 
 block header
-    = t('views.tasks.createTitle')
+    = t('views.tasks.titleItem')
 
 block content
     .card
-    .card-header.bg-secondary.text-white
+    .card-header.bg-dark.text-white
         h2= task.name
     .card-body.bg-light
         p= task.description
@@ -30,10 +30,11 @@ block content
                 .col
                     h6= t('views.tasks.labels')
                     ul
-                      each label in task.labels
-                          li= label.name
+                      if task.labels
+                          each label in task.labels
+                              li= label.name
             .row.p-1
                 .col
-                    a(href=route('taskEdit', { id: task.id }))= t('views.tasks.edit')
-                    +buttonTo(route('taskDelete', { id: task.id }), 'delete')(class="btn btn-link" value=t('views.tasks.delete'))
+                    a.btn.btn-dark.text-white.px-5.me-3(href=route('editTask', { id: task.id }))= t('views.tasks.edit')
+                    +buttonTo(route('deleteTask', { id: task.id }), 'delete')(class="btn btn-warning px-5" value=t('views.tasks.delete'))
 
