--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -25,8 +25,10 @@ block content
                   td= task.id
                   td
                       a(href=route('showTask', { id: task.id }))= task.name
-                  td= task.status.name
-                  td= `${task.creator.name}`
+                  if task.status
+                      td= `${task.status.name}`
+                  if task.creator
+                      td= `${task.creator.name}`
                   if task.executor
                       td= `${task.executor.name}`
                   else
