tasks patch correction #1: changed text from responsible to executor

--- a/server/views/tasks/index.pug
+++ b/server/views/tasks/index.pug
@@ -16,7 +16,7 @@ block content
                 th= t('views.tasks.name')
                 th= t('views.tasks.statusId')
                 th= t('views.tasks.creator')
-                th= t('views.tasks.responsibleId')
+                th= t('views.tasks.executorId')
                 th= t('views.tasks.createdAt')
                 th= t('views.tasks.actions')
         tbody
