--- a/server/views/tasks/edit.pug
+++ b/server/views/tasks/edit.pug
@@ -8,7 +8,7 @@ block content
         +input(task, 'name', errors)(type="text")
         +textarea(task, 'description', errors)(rows="3")
         +select(task, 'statusId', errors, statuses)
-        +select(task, 'responsibleId', errors, users)
+        +select(task, 'executorId', errors, users)
         +selectMultiple(task, 'labels', errors, labels)
         input(name='_method' type='hidden' value='patch')
         +submit(task)(class="btn btn-outline-light me-3" value=t('views.tasks.edit'))
