--- a/server/views/tasks/new.pug
+++ b/server/views/tasks/new.pug
@@ -8,7 +8,7 @@ block content
         +input(task, 'name', errors)(type="text")
         +textarea(task, 'description', errors)(rows="3")
         +select(task, 'statusId', errors, statuses)
-        +select(task, 'responsibleId', errors, users)
+        +select(task, 'executorId', errors, users)
         +selectMultiple(task, 'labels', errors, labels)
         +submit(task)(class="btn btn-outline-light me-3" value=t('views.tasks.new.submit'))
         a.btn.btn-warning.mt-4.px-5(href=route('tasks'))= t('views.statuses.cancel')
